<resources>
    <string name="app_name" translatable="false">AndroidCourseClass05</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="login">Login</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>
    <string name="btnShare">Share</string>
    <string name="logo_content_description">TODO</string>
    <string name="user">User:</string>
    <string name="user_e_mail">E-mail:</string>
</resources>