<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.fragments.LoginFragment">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:contentDescription="@string/logo_content_description"
        android:scaleType="center"
        app:layout_constraintBottom_toTopOf="@+id/etName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintEnd_toEndOf="@+id/ivLogo"
        app:layout_constraintStart_toStartOf="@+id/ivLogo"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twice_material_design_size"
        android:layout_marginTop="@dimen/default_material_margin"
        android:layout_marginEnd="@dimen/twice_material_design_size"
        android:autofillHints=""
        android:backgroundTint="@color/purple_200"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:minHeight="@dimen/min_height_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLogin" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twice_material_design_size"
        android:layout_marginTop="@dimen/default_material_margin"
        android:layout_marginEnd="@dimen/twice_material_design_size"
        android:autofillHints=""
        android:backgroundTint="@color/purple_200"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:minHeight="@dimen/min_height_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twice_material_design_size"
        android:layout_marginTop="@dimen/default_material_margin"
        android:layout_marginEnd="@dimen/twice_material_design_size"
        android:autofillHints=""
        android:backgroundTint="@color/purple_200"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="@dimen/min_height_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <Button
        android:id="@+id/btnShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twice_material_design_size"
        android:layout_marginTop="@dimen/default_material_margin"
        android:layout_marginEnd="@dimen/twice_material_design_size"
        android:background="@drawable/button_rounded"
        android:text="@string/btnLogin"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twice_material_design_size"
        android:layout_marginTop="@dimen/default_material_margin"
        android:layout_marginEnd="@dimen/twice_material_design_size"
        android:background="@drawable/button_rounded_border"
        android:text="@string/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnShare" />

    <ImageButton
        android:id="@+id/ibGoogle"
        android:layout_width="@dimen/image_button_size"
        android:layout_height="@dimen/image_button_size"
        android:layout_marginTop="@dimen/twice_material_design_size"
        android:layout_marginEnd="@dimen/half_material_design_size"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/logo_content_description"
        android:scaleType="centerCrop"
        android:src="@drawable/google"
        app:layout_constraintEnd_toStartOf="@+id/ibFacebook"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/ibFacebook"
        android:layout_width="@dimen/image_button_size"
        android:layout_height="@dimen/image_button_size"
        android:layout_marginTop="@dimen/twice_material_design_size"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/logo_content_description"
        android:scaleType="centerCrop"
        android:src="@drawable/facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/ibTwitter"
        android:layout_width="@dimen/image_button_size"
        android:layout_height="@dimen/image_button_size"
        android:layout_marginStart="@dimen/half_material_design_size"
        android:layout_marginTop="@dimen/twice_material_design_size"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/logo_content_description"
        android:scaleType="centerCrop"
        android:src="@drawable/twitter"
        app:layout_constraintStart_toEndOf="@+id/ibFacebook"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvSharedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twice_material_design_size"
        android:layout_marginEnd="@dimen/twice_material_design_size"
        android:layout_marginBottom="@dimen/default_material_margin"
        android:textColor="@color/purple_200"
        android:textSize="@dimen/big_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="TextViewSharedText" />

</androidx.constraintlayout.widget.ConstraintLayout>